--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ fastapi
 uvicorn
 pydantic
 openai
-autogen-agentchat
-autogen-core
-autogen_ext
+autogen-agentchat==0.4.9.2
+autogen-core==0.4.9.2
+autogen_ext==0.4.9.2
 tiktoken
 mcp-server-fetch
 mcp
